--- a/src/pages/Landing/Hero/heroSection.scss
+++ b/src/pages/Landing/Hero/heroSection.scss
@@ -37,6 +37,7 @@
         }
 
         a{
+            margin-top: 2rem;
             button{
                 font-size: 1rem;
                 font-weight: 600;
