--- a/src/pages/Landing/ActionCardsSection/actionCardsSection.scss
+++ b/src/pages/Landing/ActionCardsSection/actionCardsSection.scss
@@ -2,8 +2,7 @@
     display: flex;
     flex-direction: column;
     gap: 2rem;
-    margin-bottom: 2rem;
-    padding: 2rem;
+    padding: 3rem 1rem;
 
     .action-card-1{
         background-image: url('/publicarImage.png');
@@ -26,6 +25,7 @@
 
         h2{
             font-size: 24px;
+            font-weight: 700;
             color: var(--color-background);
         }
 
