--- a/src/pages/Landing/ActionCardsSection/actionCardsSection.scss
+++ b/src/pages/Landing/ActionCardsSection/actionCardsSection.scss
@@ -24,13 +24,13 @@
         border-radius: 10px;
 
         h2{
-            font-size: 24px;
+            font-size: clamp(24px, 6vw, 32px);
             font-weight: 700;
             color: var(--color-background);
         }
 
         p{
-            font-size: 14px;
+            font-size: clamp(14px, 3vw, 16px);
             color: var(--color-background);
         }
 
@@ -41,7 +41,7 @@
             width: 140px;
             border: 2px solid var(--color-background);
             border-radius: 5px;
-            margin-top: 2rem;
+            margin-top: 3rem;
             padding: 0.5rem 1rem;
             font-size: 16px;
             color: var(--color-background);
