--- a/src/pages/Landing/HeroSection/heroSection.scss
+++ b/src/pages/Landing/HeroSection/heroSection.scss
@@ -18,7 +18,7 @@
         margin: 0 auto;
         padding: 1rem;
         h1{
-            max-width: 550px;
+            max-width: clamp(550px, 90vw, 680px);
             line-height: clamp(40px, 10vw, 60px);
             font-size: clamp(34px, 10vw, 60px);
             font-weight: 800;
