--- a/src/pages/Landing/HeroSection/heroSection.scss
+++ b/src/pages/Landing/HeroSection/heroSection.scss
@@ -41,9 +41,10 @@
             button{
                 font-size: 1rem;
                 font-weight: 600;
-                padding: .4rem 1rem;
+                padding: .5rem 1rem;
                 border: none;
                 border-radius: 4px;
+                color: var(--color-background);
                 background-color: var(--color-primary);
                 cursor: pointer;
             }
