--- a/src/components/common/SideBar/sideBar.scss
+++ b/src/components/common/SideBar/sideBar.scss
@@ -64,7 +64,7 @@
         .sb-logout{
             display: flex;
             justify-content: center;
-            .sb-logout-link{
+            .sb-logout-btn{
                 display: flex;
                 align-items: center;
                 justify-content: center;
@@ -72,8 +72,16 @@
                 width: 100%;
                 margin-bottom: 1rem;
                 padding: 10px 16px;
+                font-size: 14px;
+                border: none;
                 border-radius: 5px;
                 color: var(--color-background);
+                background-color: transparent;
+                cursor: pointer;
+
+                & > * {
+                    font-size: 1.5rem;
+                }
             }
         }
     }
@@ -88,9 +96,6 @@
         width: 6rem;
         transform: translate(0);
         transition: width 0s ease-in;
-        .sb-nav{
-            
-        }
     }
     .sb-open{
         width: 100%;
