* Creo page de viajes * Creo IconButton * Creo ViajeCard * Modifico Ruta de viajes/:id * Modifico variables de colores * "Mokeo" peticion de viajes * Agrego paginado

--- a/src/components/common/SideBar/sideBar.scss
+++ b/src/components/common/SideBar/sideBar.scss
@@ -23,7 +23,7 @@
         }
 
         .toggle-btn{
-            color: var(--color-background);
+            color: var(--color-light);
             border: none;
             background-color: transparent;
             cursor: pointer;
@@ -75,7 +75,7 @@
                 font-size: 14px;
                 border: none;
                 border-radius: 5px;
-                color: var(--color-background);
+                color: var(--color-light);
                 background-color: transparent;
                 cursor: pointer;
 
