--- a/src/pages/Landing/HowItWorksSection/howItWorksSection.scss
+++ b/src/pages/Landing/HowItWorksSection/howItWorksSection.scss
@@ -1,5 +1,5 @@
 .howItWorksBackground{
-    background-color: var(--color-gray);
+    background-color: var(--color-terciary);
     .howItWorksContainer{
         display: flex;
         flex-direction: column;
