--- a/src/components/Layout/Footer/footer.scss
+++ b/src/components/Layout/Footer/footer.scss
@@ -30,7 +30,7 @@
                     margin-bottom: .5rem;
                     .footer-link{
                         font-weight: 300;
-                        color: var(--color-background);
+                        color: var(--color-light);
                     }
                 }
             }
@@ -49,7 +49,7 @@
                     .media-link{
                         .media-icon{
                             font-size: 2rem;
-                            color: var(--color-background);
+                            color: var(--color-light);
                         }
                     }
                 }
@@ -92,7 +92,7 @@
                         margin-bottom: .5rem;
                         .footer-link{
                             font-weight: 300;
-                            color: var(--color-background);
+                            color: var(--color-light);
                         }
                     }
                 }
