--- a/src/components/Layout/Header/header.scss
+++ b/src/components/Layout/Header/header.scss
@@ -19,7 +19,7 @@
             color: var(--color-primary);
             .logo{
                 font-size: 2rem;
-                color: var(--color-background);
+                color: var(--color-light);
                 text-decoration: none;
             }
         }
@@ -38,7 +38,7 @@
                 width: 100%;
                 height: 4px;
                 border-radius: 10px;
-                background-color: var(--color-background);
+                background-color: var(--color-light);
                 transition-property: width opacity transform;
                 transition-duration: .1s;
                 transition-timing-function: ease-in-out;
@@ -80,7 +80,7 @@
                     align-items: center;
                     .perfil-icon{
                         font-size: 7rem;
-                        color: var(--color-gray);
+                        color: var(--color-terciary);
                         margin-bottom: 1rem;
                     }
                     .perfil-btn{
@@ -102,7 +102,7 @@
                         margin-bottom: 1rem;
                         border-radius: 4px;
                         .nav-link{
-                            color: var(--color-background);
+                            color: var(--color-light);
                         }
                     }
                 }
