--- a/src/components/common/SideBarBtn/sideBarBtn.scss
+++ b/src/components/common/SideBarBtn/sideBarBtn.scss
@@ -7,7 +7,7 @@
     margin-bottom: 1rem;
     padding: 10px 16px;
     border-radius: 5px;
-    color: var(--color-background);
+    color: var(--color-light);
     background-color: #ffffff2a;
 }
 
