--- a/src/pages/Auth/auth.scss
+++ b/src/pages/Auth/auth.scss
@@ -4,7 +4,7 @@
     align-items: center;
     width: 100%;
     height: 100vh;
-    background-color: var(--color-dark);
+    background-color: var(--color-secondary);
 
     .auth-container{
         display: flex;
@@ -15,12 +15,11 @@
         margin: 1rem;
         padding: 2rem 1rem;
         border-radius: 5px;
-        background-color: var(--color-background);
+        background-color: var(--color-light);
 
         .auth-form-title{
             font-size: 1.5rem;
             font-weight: bold;
-            color: var(--color-dark);
             margin-bottom: 2rem;
         }
 
@@ -37,7 +36,7 @@
                 padding: 0.5rem;
                 border: none;
                 border-radius: 5px 5px;
-                border-bottom: 1px solid #878787;
+                border-bottom: 1px solid var(--color-gray);
                 background-color: #e8e8e8;
                 cursor: pointer;
             }
