--- a/src/pages/Landing/ActionCardsSection/actionCardsSection.scss
+++ b/src/pages/Landing/ActionCardsSection/actionCardsSection.scss
@@ -26,12 +26,12 @@
         h2{
             font-size: clamp(24px, 6vw, 32px);
             font-weight: 700;
-            color: var(--color-background);
+            color: var(--color-light);
         }
 
         p{
             font-size: clamp(14px, 3vw, 16px);
-            color: var(--color-background);
+            color: var(--color-light);
         }
 
         .action-button{
@@ -39,16 +39,16 @@
             justify-content: space-between;
             align-items: center;
             width: 140px;
-            border: 2px solid var(--color-background);
+            border: 2px solid var(--color-light);
             border-radius: 5px;
             margin-top: 3rem;
             padding: 0.5rem 1rem;
             font-size: 16px;
-            color: var(--color-background);
+            color: var(--color-light);
 
             .arrow{
                 font-size: 26px;
-                color: var(--color-background);
+                color: var(--color-light);
             }
         }
     }
@@ -71,7 +71,7 @@
         .action-button{
             transition: background-color 0.2s ease, color 0.2s ease;
             &:hover{
-                background-color: var(--color-background);
+                background-color: var(--color-light);
                 color: var(--color-text);
                 .arrow{
                     color: var(--color-text);
