--- a/src/pages/Landing/HeroSection/heroSection.scss
+++ b/src/pages/Landing/HeroSection/heroSection.scss
@@ -24,7 +24,7 @@
             font-weight: 800;
             margin-bottom: 1rem;
             word-spacing: .5rem;
-            color: var(--color-background);
+            color: var(--color-light);
             text-shadow: 0 0 10px rgba(0, 0, 0, 0.8);
         }
     
@@ -32,7 +32,7 @@
             font-size: clamp(14px, 4vw, 18px);
             font-weight: 300;
             margin-bottom: 1rem;
-            color: var(--color-background);
+            color: var(--color-light);
             text-shadow: 0 0 10px rgba(0, 0, 0, 0.8);
         }
 
@@ -44,7 +44,7 @@
                 padding: .5rem 1rem;
                 border: none;
                 border-radius: 4px;
-                color: var(--color-background);
+                color: var(--color-light);
                 background-color: var(--color-primary);
                 cursor: pointer;
             }
