--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -3,15 +3,17 @@
 :root{
     --color-primary: #FFC500;
     --color-secondary: #27272A;
-    --color-background: #F6F6F6;
+    --color-terciary: #CBD5DF;
+    --color-light: #F6F6F6;
     --color-dark: #0C0C0C;
-    --color-success: #10B981;
+    --color-light-gray: #ccc;
+    --color-gray: #494949;
+    --color-success: #10b981;
     --color-error: #EF4444;
     --color-warning: #F59E0B;
     --color-info: #3B82F6;
-    --color-gray: #CBD5DF;
 
-    --max-width: 1200px;
+    --max-width: 1280px;
 }
 
 // Reset CSS
@@ -34,7 +36,7 @@ html{
 
 // Common styles
 body{
-    background-color: var(--color-background);
+    background-color: var(--color-light);
     color: var(--color-text);
     line-height: 1.5;
     font-family: 'Inter', sans-serif;
@@ -43,7 +45,7 @@ body{
 #start{
     display: grid;
     min-height: 100dvh;
-    grid-template-rows: 4rem auto auto;
+    grid-template-rows: 4rem 1fr auto;
 }
 
 .expandedContainer{
@@ -64,7 +66,7 @@ body{
 }
 
 .text-w{
-    color: var(--color-background);
+    color: var(--color-light);
 }
 
 ::-webkit-scrollbar {
