--- a/src/components/common/SideBarBtn/sideBarBtn.scss
+++ b/src/components/common/SideBarBtn/sideBarBtn.scss
@@ -1,21 +1,29 @@
 .sb-nav-link {
+    position: relative; 
     display: flex;
     align-items: center;
     gap: 1rem;
     width: 100%;
     max-width: 230px;
-    margin-bottom: 1rem;
-    padding: 10px 16px;
-    border-radius: 5px;
+    margin-bottom: 5px;
+    padding: 8px 16px;
+    font-size: clamp(16px, 4vw, 18px);
     color: var(--color-light);
-    background-color: #ffffff2a;
+    transition: background-color 0.3s;
+
+    &::before {
+        content: '';
+        position: absolute;
+        left: 0;
+        top: 6px;
+        bottom: 6px;
+        width: 4px;
+        background-color: transparent;
+        border-radius: 4px;
+        transition: background-color 0.1s;
+    }
 }
 
-.sb-nav-link-open{
-    max-width: 4rem;
-    justify-content: center;
-}
-
-.sb-nav-link.active {
-    background-color: var(--color-primary)
+.sb-nav-link.active::before {
+    background-color: var(--color-primary);
 }
