--- a/src/pages/Viajes/viajes.scss
+++ b/src/pages/Viajes/viajes.scss
@@ -1,5 +1,12 @@
 #viajes{
     padding: 2rem 1rem;
+
+    .page-header{
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+
     .filterSortControls{
         display: flex;
         justify-content: space-between;
@@ -10,15 +17,26 @@
 
     .viajes-container{
         display: grid;
-        grid-template-columns: repeat(auto-fit, minmax(285px, 1fr));
+        grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
         justify-items: center;
         gap: 1rem;
-        margin: 2rem 0;
+        height: calc(100vh - 230px);
+        padding: 2rem 0;
+        overflow-y: scroll
     }
 
     .pagination-container{
         display: flex;
         justify-content: center;
         width: 100%;
+    }
+}
+
+@media (min-width: 400px) {
+    #viajes{
+        .viajes-container{
+            grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
+            gap: 2rem;
+        }
     }
 }
