--- a/src/pages/Landing/HowItWorksSection/howItWorksSection.scss
+++ b/src/pages/Landing/HowItWorksSection/howItWorksSection.scss
@@ -18,11 +18,13 @@
             h2{
                 font-size: 24px;
                 font-weight: 700;
+                color: var(--color-secondary);
             }
 
             p{
                 max-width: 450px;
                 font-size: 14px;
+                color: var(--color-secondary);
             }
         }
 
