--- a/src/pages/Landing/WhyChooseUsSection/whyChooseUsSection.scss
+++ b/src/pages/Landing/WhyChooseUsSection/whyChooseUsSection.scss
@@ -29,6 +29,7 @@
             h2{
                 font-size: 24px;
                 font-weight: 700;
+                color: var(--color-secondary);
             }
             ul{
                 li{
@@ -36,6 +37,7 @@
                     align-items: center;
                     font-size: 14px;
                     font-weight: 400;
+                    color: var(--color-secondary);
 
                     .lineMark{
                         display: block;
