--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -51,8 +51,7 @@ body{
 .expandedContainer{
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    width: 100vw;
+    width: 100%;
 }
 
 .container{
@@ -61,16 +60,67 @@ body{
     margin: 0 auto;
 }
 
-.text-d{
-    color: var(--color-secondary);
+.main{
+    height: 100dvh;
+    padding: 2rem 1rem 0;
+    overflow-y: scroll;
+
+    .page-header{
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        margin-bottom: 2rem;
+        color: var(--color-secondary);
+
+        .page-title{
+            display: flex;
+            align-items: center;
+            gap: .5rem;
+            
+            h2{
+                font-size: clamp(18px, 5vw, 24px);
+                color: var(--color-secondary);
+            }
+    
+            a{
+                display: flex;
+                align-items: center;
+                color: var(--color-secondary);
+            }
+        }
+
+    }
+
+    .cards-container{
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+        justify-items: center;
+        gap: 1rem;
+        height: calc(100vh - 210px);
+        padding: 2rem 0;
+        overflow-y: scroll
+    }
+
+    .pagination-container{
+        display: flex;
+        justify-content: center;
+        width: 100%;
+        height: 4rem;
+        border-top: 1px solid var(--color-light-gray);
+    }
 }
 
-.text-w{
-    color: var(--color-light);
+@media (min-width: 400px) {
+    .main{
+        .cards-container{
+            grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
+            gap: 2rem;
+        }
+    }
 }
 
 ::-webkit-scrollbar {
-    width: 10px; /* Ancho de la barra de scroll */
+    width: 8px; /* Ancho de la barra de scroll */
 }
 ::-webkit-scrollbar-track { /* Estilo del "track" (fondo de la barra de scroll) */
     background-color: #f1f1f1; /* Color de fondo */
