--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -98,7 +98,7 @@ body{
         gap: 1rem;
         height: calc(100vh - 210px);
         padding: 2rem 0;
-        overflow-y: scroll
+        overflow-y: scroll;
     }
 
     .pagination-container{
@@ -107,6 +107,19 @@ body{
         width: 100%;
         height: 4rem;
         border-top: 1px solid var(--color-light-gray);
+    }
+
+    .filterSortControls{
+        display: flex;
+        justify-content: space-between;
+        margin-bottom: 1rem 0;
+        padding-bottom: 4px;
+        border-bottom: 1px solid var(--color-light-gray);
+    }
+
+    .empty{
+        text-align: center;
+        margin: 2rem;
     }
 }
 
